--- a/src/Konso.Clients.Logging.csproj
+++ b/src/Konso.Clients.Logging.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
 	  <TargetFramework>net5.0</TargetFramework>
-	  <Company>InDevLabs</Company>
-	  <Copyright>Copyright © 2021</Copyright>
-	  <AssemblyVersion>1.0.3</AssemblyVersion>
-	  <FileVersion>1.0.3</FileVersion>
-	  <Version>1.0.3</Version>
+	  <Company>indevlabs.de</Company>
+	  <Copyright>Copyright © 2023</Copyright>
+	  <AssemblyVersion>1.1.0</AssemblyVersion>
+	  <FileVersion>1.1.0</FileVersion>
+	  <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
