--- a/src/Konso.Clients.Logging.csproj
+++ b/src/Konso.Clients.Logging.csproj
@@ -2,11 +2,15 @@
 
   <PropertyGroup>
 	  <TargetFramework>net5.0</TargetFramework>
+    <PackageId>Konso.Clients.Logging</PackageId>
 	  <Company>indevlabs.de</Company>
 	  <Copyright>Copyright © 2023</Copyright>
-	  <AssemblyVersion>1.2.0</AssemblyVersion>
-	  <FileVersion>1.2.0</FileVersion>
-	  <Version>1.2.0</Version>
+	  <AssemblyVersion>1.3.0</AssemblyVersion>
+	  <FileVersion>1.3.0</FileVersion>
+	  <Version>1.3.0</Version>
+    <PackageTags>Konso, Logging, Structured</PackageTags>
+    <RepositoryUrl>https://github.com/konsoio/konso-logs-clients-dotnet</RepositoryUrl> 
+    <RepositoryType>git</RepositoryType> 
   </PropertyGroup>
 
   <ItemGroup>
