--- a/src/Konso.Clients.Logging.csproj
+++ b/src/Konso.Clients.Logging.csproj
@@ -1,13 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFramework>net5.0</TargetFramework>
+	  <TargetFramework>net8.0</TargetFramework>
     <PackageId>Konso.Clients.Logging</PackageId>
 	  <Company>indevlabs.de</Company>
 	  <Copyright>Copyright © 2023</Copyright>
-	  <AssemblyVersion>1.3.0</AssemblyVersion>
-	  <FileVersion>1.3.0</FileVersion>
-	  <Version>1.3.0</Version>
+	  <AssemblyVersion>1.4.0</AssemblyVersion>
+	  <FileVersion>1.4.0</FileVersion>
+	  <Version>1.4.0</Version>
+	  <Nullable>enable</Nullable>
     <PackageTags>Konso, Logging, Structured</PackageTags>
     <RepositoryUrl>https://github.com/konsoio/konso-logs-clients-dotnet</RepositoryUrl> 
     <RepositoryType>git</RepositoryType> 
